src/test/BadOverrides/BadOverrides.expected
error: BadOverrides.panda:17:5: corresponding method in 'Super' has '@self' annotation, may not be overridden by a method lacking '@self' annotation
error: BadOverrides.panda:21:5: corresponding method in 'Super' has '@limited' annotation, may not be overridden by a method lacking '@limited' or '@self' annotation
error: BadOverrides.panda:25:5: a method may not override a function
3 errors
