src/test/BadOverrides/BadOverrides.panda
class Super {
    @self
    method selfMethod() {
    }

    @limited
    method limitedMethod(m:MutableString) {
    }

    function superFunction():String {
        return "I work ok!"
    }
}

class Sub : Super {
    @override
    method selfMethod() {
    }

    @override
    method limitedMethod(m:MutableString) {
    }

    @override
    method superFunction():String {
        return "I'm broken!"
    }
}
